// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`github integration addUserToGitHubOrg success 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "invitee_id": 123,
        "org": "myorg",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`github integration getAuthenticatedOctokit 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "auth": {
          "appId": 123,
          "installationId": 123,
          "privateKey": "helloworld",
        },
        "authStrategy": [MockFunction],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`github integration getGithubUsersFromGithub 1`] = `
Set {
  "chrisns",
  "bar",
  "foo",
  "pending",
  "anotherpending",
}
`;

exports[`github integration getUserIdFromUsername found 1`] = `123`;

exports[`github integration getUserIdFromUsername notfound 1`] = `"Unable to find user id for foo"`;

exports[`github integration removeUserFromGitHubOrg success 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "org": "myorg",
        "username": "foo",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;
